# prisma-client-rust

./: Cargo.toml
.github/workflows/: release.yaml
crates/lib/src/: lib.rs
crates/sdk/src/: args.rs  extensions.rs  runtime.rs
prisma-cli/: Cargo.toml
