[workspace]
members = [
	"examples/*",
	"examples/tauri/src-tauri",
	"integration-tests",
	"tests/*/*",
	"crates/*",
	"crates/sdk/example/*",
	"prisma-cli",
]
exclude = ["examples/tauri"]
resolver = "2"

[workspace.dependencies]
prisma-client-rust = { path = "crates/lib" }

diagnostics = { git = "https://github.com/gitarcode/prisma-engines", branch = "5.1.0-patched-lru-update" }
dmmf = { git = "https://github.com/gitarcode/prisma-engines", branch = "5.1.0-patched-lru-update" }
prisma-models = { git = "https://github.com/gitarcode/prisma-engines", branch = "5.1.0-patched-lru-update" }
psl = { git = "https://github.com/gitarcode/prisma-engines", branch = "5.1.0-patched-lru-update" }
query-core = { git = "https://github.com/gitarcode/prisma-engines", branch = "5.1.0-patched-lru-update" }
schema-core = { git = "https://github.com/gitarcode/prisma-engines", branch = "5.1.0-patched-lru-update" }
request-handlers = { git = "https://github.com/gitarcode/prisma-engines", branch = "5.1.0-patched-lru-update" }
user-facing-errors = { git = "https://github.com/gitarcode/prisma-engines", branch = "5.1.0-patched-lru-update" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

convert_case = "0.10.0"

tauri-specta = { version = "2.0.0-rc.9" }

# This is a deprecated feature so we don't really care about the verison
rspc = "*"

# We don't lock version cause PCR only depends on `derive(Type)` so it should be fine.
specta = "^2.0.0-rc"
